--- a/js/open-hours.html
+++ b/js/open-hours.html
@@ -1,6 +1,9 @@
 <md-dialog aria-label="Open Hours dialog">
 	<md-dialog-content layout-padding>
 		
+		<p ng-repeat="rule in rules">
+		{{rule}}
+		</p>
 		<p>HI</p>
 		
 	</md-dialog-content>
